Document PPDG/src/objects/Account_with_IBB__c.object
<CustomObject>
    <fields>
        <fullName>Absolute_balance__c</fullName>
        <formula>ABS( Available_Balance__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Absolute balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Blocked__c</fullName>
        <label>Account Blocked</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Closed__c</fullName>
        <label>Account Closed</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Conduct__c</fullName>
        <description>For use with credit reporting.</description>
        <label>Account Conduct</label>
        <picklist>
            <picklistValues>
                <fullName>Acceptable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not acceptable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Currency__c</fullName>
        <defaultValue>&quot;GBP&quot;</defaultValue>
        <label>Account Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Inactive__c</fullName>
        <label>Account Inactive</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Is_Joint__c</fullName>
        <label>Account Is Joint</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Number_Dashes__c</fullName>
        <formula>LEFT(Name, 4) + &quot;-&quot; + MID(Name, 5, 6) + &quot;-&quot; + MID(Name, 11, 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number Dashes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Suffix__c</fullName>
        <label>Account Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>IF(
ISNULL(TEXT( IBB_Product__r.Type_of_Product__c)),
TEXT( IBB_Product__r.Category_of_Product__c),
TEXT( IBB_Product__r.Type_of_Product__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Balance__c</fullName>
        <label>Available Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <formula>TEXT(  CreatedBy.Branch__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_code__c</fullName>
        <formula>LEFT(Name  , 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_name__c</fullName>
        <formula>IF(ISBLANK(  Branch_code__c  ), &quot;No branch&quot;,
IF(CONTAINS(&quot;1100&quot;, Branch_code__c), &quot;Head Office&quot;,
IF(CONTAINS(&quot;1301&quot;, Branch_code__c), &quot;Manchester&quot;,
IF(CONTAINS(&quot;1101:1102&quot;, Branch_code__c), &quot;Small Heath&quot;,
IF(CONTAINS(&quot;1201:1202&quot;, Branch_code__c), &quot;Edgware Road&quot;, 
IF(CONTAINS(&quot;1210:1215&quot;, Branch_code__c), &quot;Whitechapel&quot;,
IF(CONTAINS(&quot;1120&quot;, Branch_code__c), &quot;Leicester&quot;,
IF(CONTAINS(&quot;1199&quot;, Branch_code__c), &quot;Online&quot;,
IF(CONTAINS(&quot;7261&quot;, Branch_code__c), &quot;Commercial Banking&quot;,
&quot;Other&quot;)))))))))</formula>
        <label>Branch name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chequebook_Required__c</fullName>
        <formula>IF( Primary_SFDC_Account__r.Cheque_book_required__c = TRUE,&quot;Y&quot;,&quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chequebook Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleared_Balance__c</fullName>
        <label>Cleared Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collections_Log__c</fullName>
        <label>Collections Log</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Conga_Overdrawn_Letter_TEST__c</fullName>
        <formula>&quot;&amp;id=&quot;+ Id +
&quot;&amp;Reportid=00OD0000005nLNp?pv0=&quot; + Id + &quot;~pv1=0&quot;+
&quot;&amp;templateId=a0PD00000089cb0&quot; +
&quot;&amp;DefaultPDF=1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Overdrawn Letter TEST</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_in_EBS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created in EBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentRate__c</fullName>
        <label>CurrentRate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_entered_collections__c</fullName>
        <label>Date entered collections</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Transaction__c</fullName>
        <label>Date of Last Transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Debit_Bank_Account__c</fullName>
        <label>Direct Debit Bank Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Debit_Sort_Code__c</fullName>
        <label>Direct Debit Sort Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Customer_number__c</fullName>
        <formula>Primary_SFDC_Account__r.EBS_ID__c</formula>
        <label>EBS Customer number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Deal_Account_Type__c</fullName>
        <formula>IBB_Product__r.EBS_Deal_Account_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBS Deal Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_ID__c</fullName>
        <externalId>true</externalId>
        <label>EBS ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Account_Number_Search__c</fullName>
        <externalId>true</externalId>
        <label>External Account Number Search</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Account_Number__c</fullName>
        <label>External Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBB_Product_Name__c</fullName>
        <formula>IBB_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IBB Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBB_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IBB Product</label>
        <referenceTo>IBB_Product__c</referenceTo>
        <relationshipName>Accounts_with_IBB1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsLinkedToOpp__c</fullName>
        <formula>if(Id ==  Opportunity__r.Account_with_IBB__c , true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsLinkedToOpp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ledger_Balance__c</fullName>
        <label>Ledger Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <description>C0315</description>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Repayment__c</fullName>
        <label>Monthly Repayment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Repayment_date__c</fullName>
        <description>C0315</description>
        <label>Next Repayment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NoOfMonthsInArrears__c</fullName>
        <label>No of months in arrears</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Primary_account_holders__c</fullName>
        <label>No Primary account holders</label>
        <summarizedField>Asset_Relationship__c.Primary__c</summarizedField>
        <summaryForeignKey>Asset_Relationship__c.Account_with_IBB__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_account_holders__c</fullName>
        <label>Number of account holders</label>
        <summaryForeignKey>Asset_Relationship__c.Account_with_IBB__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_account__c</fullName>
        <formula>IF( EBS_ID__c = Null, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is open account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Accounts_with_IBB1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pool__c</fullName>
        <label>Pool</label>
        <picklist>
            <picklistValues>
                <fullName>Pool A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pool X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redeemed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pool_entry_date__c</fullName>
        <label>Pool entry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Month_s_Balance__c</fullName>
        <description>This field is to be used with mapping from EBS previous balance.</description>
        <label>Previous Month&apos;s Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Customer_Default_Branch__c</fullName>
        <label>Primary Customer Default Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Customer_EBS_ID__c</fullName>
        <label>Primary Customer EBS ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_SFDC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary SFDC Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Accounts_with_IBB1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>C0315</description>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Accounts_with_IBB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RepAccountType__c</fullName>
        <label>RepAccountType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepDealAccountType__c</fullName>
        <label>RepDealAccountType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repayment_due_date__c</fullName>
        <inlineHelpText>Collections agent to manually enter the agreed repayment due date</inlineHelpText>
        <label>Repayment due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reserved_Balance__c</fullName>
        <label>Reserved Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seller1__c</fullName>
        <formula>Related_Opportunity__r.Seller__r.FirstName+ &quot; &quot;+  Related_Opportunity__r.Seller__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <label>Seller</label>
        <picklist>
            <picklistValues>
                <fullName>External User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shadow_Credit__c</fullName>
        <label>Shadow Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shadow_Debit__c</fullName>
        <label>Shadow Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single_Payment_Amount__c</fullName>
        <description>Used to describe a one off HPP/HTB/BTL payment such as the initial payment</description>
        <label>Single Payment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Balance__c</fullName>
        <label>Status Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status_Code_Description__c</fullName>
        <label>Status Code Description</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Waiting for submission to DCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary charge secured on debtor&apos;s property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undergoing litigation with Drydens solicitors.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to submit for write-off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IVA and need to know if a dividend will be paid.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With external agents (CRS) undergoing debt collection activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being worked by IBB Collections internally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promise to pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for payment to clear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers who are making payments to cover NMR and clear arrears</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SumOfBalanceInArrears__c</fullName>
        <label>Sum of balance in arrears</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Customer Account</label>
    <listViews>
        <fullName>Collections_PF</fullName>
        <columns>NAME</columns>
        <columns>Pool__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IBB_Product_Name__c</field>
            <operation>contains</operation>
            <value>Personal finance,Home</value>
        </filters>
        <filters>
            <field>SumOfBalanceInArrears__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </filters>
        <label>Collections: PF</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>No_Account_Holders</fullName>
        <columns>NAME</columns>
        <columns>EBS_ID__c</columns>
        <columns>No_Primary_account_holders__c</columns>
        <columns>Number_of_account_holders__c</columns>
        <columns>Account_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EBS_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Number_of_account_holders__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Primary_SFDC_Account__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>No Account Holders (exlude orphaned)</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Orphaned_Accounts_No</fullName>
        <columns>NAME</columns>
        <columns>EBS_ID__c</columns>
        <columns>No_Primary_account_holders__c</columns>
        <columns>Number_of_account_holders__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_SFDC_Account__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>EBS_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Number_of_account_holders__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Orphaned Accounts No Jar</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Orphaned_Accounts_With_Jar</fullName>
        <columns>NAME</columns>
        <columns>EBS_ID__c</columns>
        <columns>No_Primary_account_holders__c</columns>
        <columns>Number_of_account_holders__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_SFDC_Account__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>EBS_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Number_of_account_holders__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Orphaned Accounts With Jar</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_internal_users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Too_many_primary_applicants</fullName>
        <columns>NAME</columns>
        <columns>EBS_ID__c</columns>
        <columns>No_Primary_account_holders__c</columns>
        <columns>Number_of_account_holders__c</columns>
        <columns>Account_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>No_Primary_account_holders__c</field>
            <operation>greaterThan</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>EBS_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Number_of_account_holders__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>Too many primary applicants</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_internal_users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>